# cxbindings

./: .gitignore  4  CMakeLists.txt  README  create_build_files.sh  premake.lua  sed-replace.sh  text.txt
cmake/: Doxyfile.in  copyMacros.cmake  executable.cmake  library.cmake
cxb/: CMakeLists.txt  cxb.cpp
cxbHttp/include/: CXBindingsHttpRequest.h  CXBindingsSocket.h
cxbindings/: CMakeLists.txt
cxbindings/include/: CXBindings.h  CXBindingsAny.h  CXBindingsException.h  CXBindingsGeneratorFactory.h  CXBindingsGeneratorFile.h  CXBindingsGlobals.h  CXBindingsInterpreter.h  Singleton.h
cxbindings/include/handlers/: CXBindingsChildContainerHandler.h  CXBindingsChildHandler.h  CXBindingsConditionHandler.h  CXBindingsForEachChildHandler.h  CXBindingsGeneratorFileAddinHandler.h  CXBindingsGeneratorFileHandler.h  CXBindingsGeneratorFileObjectPartHandler.h  CXBindingsHandler.h  CXBindingsInheritsHandler.h  CXBindingsModelHandler.h  CXBindingsObjectHandler.h  CXBindingsTypeHandler.h  CXBindingsVariableHandler.h
cxbindings/src/: CXBindings.cpp  CXBindingsException.cpp  CXBindingsExpressionParser.cpp  CXBindingsGeneratorFactory.cpp  CXBindingsGeneratorFile.cpp  CXBindingsGlobals.cpp  CXBindingsInterpreter.cpp  CXBindingsObjectBase.cpp  CXBindingsXmlReader.cpp
cxbindings/src/generators/: CXBindingsCppHandlersGenerator.cpp  CXBindingsCppObjectsGenerator.cpp
cxbindings/src/handlers/: CXBindingsCategoryHandler.cpp  CXBindingsChildContainerHandler.cpp  CXBindingsForEachChildHandler.cpp  CXBindingsGeneratorFileObjectPartHandler.cpp  CXBindingsGeneratorFileVarHandler.cpp  CXBindingsInfoHandler.cpp  CXBindingsInheritsHandler.cpp  CXBindingsModelHandler.cpp  CXBindingsSetHandler.cpp  CXBindingsTypeHandler.cpp  CXBindingsVariableHandler.cpp
libcxbindings/: CMakeLists.txt
libcxbindings/include/: CXBindings.h  CXBindingsAny.h  CXBindingsDefinitions.h  CXBindingsException.h  CXBindingsExpressionParser.h  CXBindingsGeneratorFactory.h  CXBindingsHashTable.h  CXBindingsObjectBase.h  CXBindingsXmlReader.h
libcxbindings/include/generators/: CXBindingsCppHandlersGenerator.h  CXBindingsCppObjectsGenerator.h
libcxbindings/include/handlers/: CXBindingsCategoryHandler.h  CXBindingsGenerationHandler.h  CXBindingsGeneratorFileTemplateHandler.h  CXBindingsGeneratorFileTypeInfoHandler.h  CXBindingsGeneratorFileVarHandler.h  CXBindingsInfoHandler.h  CXBindingsNameHandler.h  CXBindingsPropertyHandler.h  CXBindingsRuleHandler.h  CXBindingsSetHandler.h
libcxbindings/src/: CXBindings.cpp  CXBindingsAny.cpp  CXBindingsException.cpp  CXBindingsGeneratorFactory.cpp  CXBindingsHashTable.cpp  CXBindingsInterpreter.cpp
libcxbindings/src/generators/: CXBindingsCppHandlersGenerator.cpp  CXBindingsCppObjectsGenerator.cpp
libcxbindings/src/handlers/: CXBindingsChildHandler.cpp  CXBindingsConditionHandler.cpp  CXBindingsGenerationHandler.cpp  CXBindingsGeneratorFileAddinHandler.cpp  CXBindingsGeneratorFileHandler.cpp  CXBindingsGeneratorFileTemplateHandler.cpp  CXBindingsGeneratorFileTypeInfoHandler.cpp  CXBindingsHandler.cpp  CXBindingsNameHandler.cpp  CXBindingsObjectHandler.cpp  CXBindingsPropertyHandler.cpp  CXBindingsRuleHandler.cpp
libstdxmlbindings/: CMakeLists.txt
libstdxmlbindings/include/: stdDefines.h  stdException.h  stdHashTable.h  stdObject.h  stdObjectFactory.h  stdSingleton.h  stdXmlReader.h
libstdxmlbindings/src/: stdException.cpp  stdHashTable.cpp  stdObject.cpp  stdObjectFactory.cpp  stdXmlReader.cpp
scripts/cxbindings/: premake.lua
share/: CppHandlersStd.templates.xml  CppObjectsStd.templates.xml  CppObjectsWx.templates.xml  Hollidays.xsd  WSDLGrammar.xml  XSDGrammar.xml  holidaysdemo.xml  premake_package_template.lua  wxFBProject.fbp  wxgrammar_cpphandlers.xml  wxgrammar_cpphandlersstd.xml
share/demo/: Hollidays.xsd
utils/: FindCXBindings.cmake  FindStdXmlbindings.cmake  cxbindings.pc.in  stdxmlbindings.pc.in
